--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-sovityEdcExtensionsVersion=0.0.1-SNAPSHOT
+sovityEdcExtensionsVersion=10.4.1-drk
 
 org.gradle.jvmargs=-Xmx1024m
 org.gradle.parallel=true
